<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="wrap_content"
    android:background="@drawable/relativelayout_border">

    <TextView
        android:id="@+id/typeCheckboxTextView"
        android:layout_width="320dp"
        android:layout_height="47dp"
        android:layout_below="@id/typeShortResponseTextView"
        android:layout_toEndOf="@id/questionTypeChipGroup"
        android:fontFamily="@font/batmfa__"
        android:gravity="center|left"
        android:text="@string/multi_choice_text"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/quesIdEdTxt"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_below="@id/questionTypeChipGroup"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="175dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittextregborder"
        android:ems="10"
        android:fontFamily="@font/batmfa__"
        android:gravity="center"
        android:hint="@string/question_id_hinttxt"
        android:inputType="text"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/enterQuestionEditText"
        android:layout_width="360dp"
        android:layout_height="126dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/quesedittext_border"
        android:cursorVisible="true"
        android:ems="10"
        android:fontFamily="@font/batmfa__"
        android:hint="@string/enter_question_hinttext"
        android:importantForAutofill="no"
        android:includeFontPadding="true"
        android:inputType="textLongMessage|textPersonName"
        android:textAlignment="center"
        android:textSize="31sp" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/questionTypeChipGroup"
        android:layout_width="74dp"
        android:layout_height="197dp"
        android:layout_below="@id/enterQuestionEditText"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/typeSliderChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/backgroundNavyBlue"
            android:checkable="true"
            app:chipIcon="@drawable/blue_circle"
            app:chipSurfaceColor="@color/blueOne"
            app:closeIcon="@drawable/blue_circle"
            app:closeIconTint="@color/teal_200" />

        <com.google.android.material.chip.Chip
            android:id="@+id/typeShortResponseChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            app:chipIcon="@drawable/blue_circle"
            app:chipSurfaceColor="@color/blueOne" />

        <com.google.android.material.chip.Chip
            android:id="@+id/typeCheckboxChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            app:chipIcon="@drawable/blue_circle"
            app:chipSurfaceColor="@color/blueOne" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/typeSliderTextView"
        android:layout_width="320dp"
        android:layout_height="47dp"
        android:layout_below="@id/enterQuestionEditText"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/questionTypeChipGroup"
        android:fontFamily="@font/batmfa__"
        android:gravity="center|left"
        android:text="@string/slider_question_text"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/typeShortResponseTextView"
        android:layout_width="320dp"
        android:layout_height="47dp"
        android:layout_below="@id/typeSliderTextView"
        android:layout_toEndOf="@id/questionTypeChipGroup"
        android:fontFamily="@font/batmfa__"
        android:gravity="center|left"
        android:text="@string/short_response_text"
        android:textSize="25sp" />
    <ScrollView
        android:id="@+id/emptySView"
        android:layout_width="360dp"
        android:layout_height="219dp"
        android:layout_below="@id/typeCheckboxTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/quesedittext_border"
        android:contentDescription="@string/Content_Description_Settings"
        android:visibility="visible">
    </ScrollView>

    <ScrollView
        android:id="@+id/shortResOpsSView"
        android:layout_width="360dp"
        android:layout_height="219dp"
        android:layout_below="@id/typeCheckboxTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/quesedittext_border"
        android:contentDescription="@string/Content_Description_Settings"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/shortQsRLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

        </RelativeLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/multiChoiceOpsSView"
        android:layout_width="360dp"
        android:layout_height="219dp"
        android:layout_below="@id/typeCheckboxTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/quesedittext_border"
        android:contentDescription="@string/Content_Description_Settings"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/multiQsRLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

        </RelativeLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/sliderOpsSView"
        android:layout_width="360dp"
        android:layout_height="219dp"
        android:layout_below="@id/typeCheckboxTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/quesedittext_border"
        android:contentDescription="@string/Content_Description_Settings"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/slderQsRLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <EditText
                android:id="@+id/sldrMinEdTxt"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_below="@id/sldrMaxEdTxt"
                android:layout_centerInParent="true"
                android:layout_marginTop="13dp"
                android:background="@drawable/edittextregborder"
                android:ems="10"
                android:fontFamily="@font/batmfa__"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/slider_range_min_hinttxt"
                android:inputType="numberDecimal"
                android:paddingLeft="2dp"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/sldrMaxEdTxt"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="13dp"
                android:background="@drawable/edittextregborder"
                android:ems="10"
                android:fontFamily="@font/batmfa__"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/slider_range_max_hinttxt"
                android:inputType="numberDecimal"
                android:paddingLeft="2dp"
                android:textSize="28sp"
                android:visibility="visible" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>