<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundNavyBlue"
    android:orientation="vertical">

    <Button
        android:id="@+id/backButtonSettings"
        android:layout_width="290dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/outlineGreen"
        android:fontFamily="@font/batmfa__"
        android:text="@string/back_button_text"
        android:textColor="@color/blueOne"
        android:textSize="45sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.978" />

    <ScrollView
        android:layout_width="674dp"
        android:layout_height="721dp"
        android:contentDescription="@string/Content_Description_Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top">

            <TextView
                android:id="@+id/pitScoutingQuestionsTextView"
                android:layout_width="match_parent"
                android:layout_height="146dp"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/batmfa__"
                android:gravity="center"
                android:text="@string/pit_scouting_questions_text"
                android:textAlignment="center"
                android:textColor="@color/safetyGreen"
                android:textSize="50sp" />

            <Button
                android:id="@+id/addQuestionButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@id/pitScoutingQuestionsTextView"
                android:layout_marginLeft="70dp"
                android:backgroundTint="@color/safetyGreen"
                android:fontFamily="@font/batmfa__"
                android:text="+"
                android:textAlignment="center"
                android:textColor="@color/backgroundNavyBlue"
                android:textSize="80sp"
                android:textStyle="bold"
                app:cornerRadius="30dp" />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>